--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-native-web3",
+  "name": "react-native-web3-js",
   "version": "1.0.0",
-  "description": "",
+  "description": "Web3.js for React Native",
   "main": "web3.js",
   "scripts": {
     "start": "webpack",
@@ -10,11 +10,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "babel-eslint": "^8.2.3",
     "babel-loader": "^7.1.4",
     "babel-preset-react-native": "^4.0.0",
-    "create-hash": "^1.2.0",
-    "eslint": "^4.19.1",
     "jest": "^23.0.0",
     "react-native": "^0.55.4",
     "web3": "^1.0.0-beta.34",
