--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jest": "^23.0.0",
     "react-native": "^0.55.4",
     "web3": "^1.0.0-beta.34",
+    "web3-eth-personal": "^1.0.0-beta.34",
     "webpack": "^4.8.3",
     "webpack-cli": "^2.1.4"
   }
